--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
+    "vuex-pathify": "^1.5.1",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@france-atelier/eslint-config-frontend-vue2": "^1.0.0",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^14.17.26",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/vue": "^5.8.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "@vue/cli-plugin-babel": "^4.5.14",
-    "@vue/cli-plugin-eslint": "^4.5.14",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.6",
     "@vue/cli-plugin-pwa": "^4.5.14",
     "@vue/cli-plugin-router": "^4.5.14",
     "@vue/cli-plugin-typescript": "^4.5.14",
@@ -32,7 +35,7 @@
     "@vue/cli-plugin-vuex": "^4.5.14",
     "@vue/cli-service": "^4.5.14",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/eslint-config-typescript": "^8.0.0",
     "@vue/test-utils": "^1.2.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
@@ -43,6 +46,7 @@
     "sass": "^1.43.2",
     "sass-loader": "^8.0.2",
     "typescript": "^4.4.4",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   }
 }
