--- a/package.json
+++ b/package.json
@@ -10,42 +10,42 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.18.3",
+    "core-js": "^3.20.3",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.5.3",
     "vuex": "^3.4.0",
     "vuex-pathify": "^1.5.1",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@france-atelier/eslint-config-frontend-vue2": "^1.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@france-atelier/eslint-config-frontend-vue2": "^1.1.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/vue": "^5.8.2",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.4",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@vue/cli-plugin-babel": "^4.5.14",
-    "@vue/cli-plugin-eslint": "^5.0.0-beta.6",
-    "@vue/cli-plugin-pwa": "^4.5.14",
-    "@vue/cli-plugin-router": "^4.5.14",
-    "@vue/cli-plugin-typescript": "^4.5.14",
-    "@vue/cli-plugin-unit-jest": "^4.5.14",
-    "@vue/cli-plugin-vuex": "^4.5.14",
-    "@vue/cli-service": "^4.5.14",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^8.0.0",
-    "@vue/test-utils": "^1.2.2",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.20",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "^4.5.15",
+    "@vue/cli-plugin-vuex": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/test-utils": "^1.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.7.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.43.2",
-    "sass-loader": "^8.0.2",
-    "typescript": "^4.4.4",
+    "prettier": "^2.5.1",
+    "sass": "^1.48.0",
+    "sass-loader": "^10.2.1",
+    "typescript": "^4.5.4",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   }
