--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint --no-fix --max-errors Infinity"
+    "lint": "npm run lint:format && npm run lint:quality",
+    "lint:quality": "cross-env ESLINT_CODE_QUALITY_REPORT=gl-codequality.json vue-cli-service lint --format gitlab --no-fix --max-errors Infinity",
+    "lint:format": "prettier --check --ignore-path .gitignore \"**/*.+(json|ts|vue)\""
   },
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
@@ -40,7 +42,9 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
+    "eslint-formatter-gitlab": "^3.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "prettier": "^2.5.1",
     "sass": "^1.48.0",
