--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "lint:format": "prettier --check --ignore-path .gitignore \"**/*.+(json|ts|vue)\""
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.4",
+    "@vueuse/core": "^7.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.20.3",
+    "pinia": "^2.0.9",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3",
-    "vuex": "^3.4.0",
-    "vuex-pathify": "^1.5.1",
-    "vuex-persistedstate": "^4.1.0"
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@france-atelier/eslint-config-frontend-vue2": "^1.1.0",
@@ -34,7 +34,6 @@
     "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-plugin-typescript": "^4.5.15",
     "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
