✨ add favicon and app title, and improve docker image

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -26,10 +26,16 @@ http {
     listen 80;
     server_name localhost;
 
+    location ~* \.(js|map|json|css|png|jpg|jpeg|gif|ico|txt)$ {
+      root /app;
+      index index.html;
+      try_files $uri $uri/ public/$uri public/$uri/;
+    }
+
     location / {
       root /app;
       index index.html;
-      try_files $uri $uri/ public/$uri public/$uri/ /index.html;
+      try_files $uri $uri/ /index.html;
     }
 
     error_page 500 502 503 504 /50x.html;
