--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@types/node": "^16.11.22",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.0-rc.2",
     "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
-    "@vue/cli-plugin-pwa": "^4.5.15",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "@vue/cli-plugin-typescript": "^4.5.15",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^5.0.0-rc.2",
+    "@vue/cli-plugin-router": "^5.0.0-rc.2",
+    "@vue/cli-plugin-typescript": "^5.0.0-rc.2",
+    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.2",
+    "@vue/cli-service": "^5.0.0-rc.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^1.3.0",
@@ -47,9 +47,9 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
-    "sass-loader": "^10.2.1",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.5.5",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^5.68.0"
   }
 }
