--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.6",
-    "@vue/composition-api": "^1.4.5",
-    "@vueuse/core": "^7.5.5",
+    "@vue/composition-api": "^1.4.9",
+    "@vueuse/core": "^8.1.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.21.0",
-    "pinia": "^2.0.11",
+    "core-js": "^3.21.1",
+    "pinia": "^2.0.12",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
@@ -27,17 +27,17 @@
     "@france-atelier/eslint-config-frontend-vue2": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/vue": "^5.8.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "@vue/cli-plugin-babel": "^5.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
-    "@vue/cli-plugin-pwa": "^5.0.0-rc.2",
-    "@vue/cli-plugin-router": "^5.0.0-rc.2",
-    "@vue/cli-plugin-typescript": "^5.0.0-rc.2",
-    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.2",
-    "@vue/cli-service": "^5.0.0-rc.2",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vue/cli-plugin-babel": "^5.0.3",
+    "@vue/cli-plugin-eslint": "^5.0.3",
+    "@vue/cli-plugin-pwa": "^5.0.3",
+    "@vue/cli-plugin-router": "^5.0.3",
+    "@vue/cli-plugin-typescript": "^5.0.3",
+    "@vue/cli-plugin-unit-jest": "^5.0.3",
+    "@vue/cli-service": "^5.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^1.3.0",
@@ -45,14 +45,14 @@
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.8.0",
+    "eslint": "^8.11.0",
     "eslint-formatter-gitlab": "^3.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.4.0",
-    "typescript": "^4.5.5",
+    "prettier": "^2.6.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.6.2",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.68.0"
+    "webpack": "^5.70.0"
   }
 }
